<resources>
    <string name="app_name">Renew Data</string>
    <string name="app_source">https://dennohpeter.com/projects/renew-data</string>
    <string name="telkom">Telkom</string>
    <string name="purchased_time">Purchased Time</string>
    <string name="expiry_time">Expiry Time</string>
    <string name="time_left">Time Left</string>
    <string name="expired">Expired</string>
    <string name="not_date">__:__:__</string>
    <!--    About activity  -->
    <string name="about">About</string>
    <string name="copyright">Built &amp; Designed by <a href="https://dennohpeter.com">Dennis Peterson</a> </string>

    <string name="select_network">Select Network: </string>
    <string name="date">date</string>
    <string name="message_body">Message body</string>
    <string name="nothing_to_show">Nothing to show.\n Try <b>refreshing…</b></string>
    <string name="action_ok">Continue</string>
    <string name="subscribed">subscribed</string>
    <string name="twenty_four_hour_fmt">Check to display the time in a 24 hour format.</string>
    <string name="twelve_hour_fmt">Uncheck to display the time in a 12 hour format using AM and PM.</string>
    <string name="default_reminder_time">10 minutes</string>
    <string name="default_snooze_time">5 minutes</string>
    <string name="select_date_format">Select Date Format</string>
    <string name="default_date_format">MMM dd, yyyy hh:mm:ss</string>
    <string name="syncing_with_messages">Syncing with messages…</string>

    <string name="action_smsReceiver">action.SmsReceiver</string>
    <string name="change_theme">Change theme</string>
    <string name="refreshMessages">Refresh messages</string>
    <string name="appAdMobID">ca-app-pub-6672249802346735~6961292388</string>

    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_logs">Logs</string>
    <string name="title_settings">Settings</string>

    <string name="feedback_and_suggestions">Feedback &amp; Suggestions</string>
    <string name="sounds_and_notifications">Sounds &amp; Notifications</string>
    <string name="recommend_to_friends">Recommend to Friends</string>
    <string name="snooze_reminder_interval">Snooze Reminder Interval</string>
    <string name="remind_me_before">Remind Me Before</string>
    <string name="permission_sms_rationale">To sync with messages, grant <b>%1$s</b>  Read SMS permission.</string>
    <string name="permission_sms_denied">Can\'t sync messages. Read SMS permission is required.</string>
    <string name="permission_sms_never_ask_again">Can\'t sync messages. Read SMS permission is required.</string>
    <string name="not_now">Not Now</string>
    <string name="permission_phone_state_rationale">To get available network operators, allow <b>%1$s</b> to read phone state.</string>
    <string name="permission_phone_state_denied">Can\'t get phone state status. Read PHONE STATE permission is required</string>
    <string name="permission_phone_state_never_ask_again">Can\'t get phone state status. Read PHONE STATE permission is required</string>
    <string name="selected_network">selected_network</string>
    <string name="networks">networks</string>
    <string name="select_default_network">Select default network</string>
    <string name="adjust_tracker">adjust tracker</string>
    <string name="adjust_purchased_time">Adjust Purchased Time</string>
    <string name="change_subscription_plan">Change Subscription Plan</string>
    <string name="adjust_alarm_settings">Adjust Alarm Settings</string>
    <string name="save">Save</string>
    <string name="remindBeforeInMins">remindBeforeInMins</string>
    <string name="confirm_changes">Confirm Changes</string>
    <string name="save_changes_message">Do you want to save changes?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="subscription_plan">subscriptionPlan</string>
    <string name="app_preferences">appPreferences</string>
</resources>
